--- a/online-store/src/css/ProductList.css
+++ b/online-store/src/css/ProductList.css
@@ -5,6 +5,7 @@ body {
 .searchContainer {
   height: 100px;
   width: 100%;
+  margin-top: 100px;
 }
 
 .searchInput {
@@ -78,6 +79,7 @@ body {
   top: 9.5em;
   width: 250px;
   transition: 0.5s;
+  z-index: 1;
 }
 
 .categoryShowButton:hover {
@@ -105,6 +107,7 @@ body {
 
 .categoryHeadContainer {
   display: flex;
+  z-index: 1;
 }
 
 .categoryHeadContainer button {
@@ -171,6 +174,7 @@ body {
 .products:hover {
   box-shadow: 10px 10px 15px 5px rgba(0, 0, 0, 0.283);
   transform: scale(1.01);
+  z-index: 0;
 }
 
 /* título do produto */
